# FreeProxiesScraper

./: setup.py
python/src/: main.py  player_data.csv  team_data.csv
python/src/async_scraper/core/: base_scraper.py  http_scraper.py
python/src/async_scraper/parser/: base_parser.py  html_parser.py
python/src/async_scraper/proxy/: free_proxy_provider.py  proxy_manager.py  proxy_provider.py
python/src/async_scraper/storage/: base_storage.py  csv_storage.py
python/src/async_scraper/utils/: user_agent.py
rust/: Cargo.toml
rust/src/: crawler.rs  lib.rs  main.rs  proxy_list.rs  validator.rs
